k8s-manifests/cars/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-app
  namespace: cars
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cars
  template:
    metadata:
      labels:
        app: cars
    spec:
      containers:
      - name: cars
        image: 426192960096.dkr.ecr.us-east-1.amazonaws.com/cars:v1
        ports:
        - containerPort: 5000
