k8s-manifests/cars/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cars-service
  namespace: cars
spec:
  selector:
    app: cars
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
