k8s-manifests/cars/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cars-ingress
  namespace: cars
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /cars
        pathType: Prefix
        backend:
          service:
            name: cars-service
            port:
              number: 80
